Add Signal Pulse visibility tabs
